--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">NSWBusinesDays</string>
+    <string name="business_days_button">Calculate Business Dates</string>
 </resources>
